--- a/TimeZone/appsettings.json
+++ b/TimeZone/appsettings.json
@@ -5,6 +5,19 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "cs": "Data Source=DESKTOP-8QKV55J\\SQLEXPRESS;Initial Catalog=TimeZone;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-  "AllowedHosts": "*"
+  "cs": "Data Source=DESKTOP-8QKV55J\\SQLEXPRESS;Initial Catalog=TimeZone;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;",
+  "AllowedHosts": "*",
+
+  "JWT": {
+    "ValidIssuer": "http://localhost:7279/", //provider
+    "ValidAudiance": "http://localhost:42000/", //url consumer
+    "Secret": "StrongStrong0003997098777622222OnKey"
+  }
+  ,
+  "Authentication": {
+    "Google": {
+      "ClientId": "212632650928-aj5lcsa95iretot0prf8ts50dthn1rv4.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  }
 }
