--- a/TimeZone/appsettings.json
+++ b/TimeZone/appsettings.json
@@ -18,6 +18,10 @@
     "Google": {
       "ClientId": "212632650928-aj5lcsa95iretot0prf8ts50dthn1rv4.apps.googleusercontent.com",
       "ClientSecret": "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"
+    },
+    "Microsoft": {
+      "ClientId": "8873cd95-694f-44a4-a9d2-e19666843ce1",
+      "ClientSecret": "64012323-bb2b-4f7f-a8d3-f1171596f934"
     }
   }
 }
