--- a/TimeZone/PresentationLayer.csproj
+++ b/TimeZone/PresentationLayer.csproj
@@ -27,6 +27,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
     <PackageReference Include="Microsoft.Owin.Security.Jwt" Version="4.2.2" />
+    <PackageReference Include="Stripe.net" Version="43.17.0" />
   </ItemGroup>
 
   <ItemGroup>
